[pkmn-service] - Bazel build and run